Show simple embedded table next to the ifc viewer

--- a/app/assets/stylesheets/layout/work_packages/_table_embedded.sass
+++ b/app/assets/stylesheets/layout/work_packages/_table_embedded.sass
@@ -37,6 +37,7 @@ $table-timeline--compact-row-height: 28px
     flex-direction: column
     overflow: hidden
     width: 100%
+    height: 100%
 
   // Align with section header
   .wp-table--table-header:first-child .generic-table--sort-header-outer,
