--- a/modules/ifc_models/app/assets/stylesheets/ifc_viewer/generic.sass
+++ b/modules/ifc_models/app/assets/stylesheets/ifc_viewer/generic.sass
@@ -30,7 +30,7 @@
 [data-name="ifc_models"] .main-menu--children
   overflow-x: hidden !important
 
-.ifc-viewer--container
+.ifc-view--viewer-container
   flex-grow: 1
   position: relative
   width: 100%
