--- a/modules/ifc_models/app/views/ifc_models/ifc_models/show_defaults.html.erb
+++ b/modules/ifc_models/app/views/ifc_models/ifc_models/show_defaults.html.erb
@@ -61,7 +61,5 @@ See doc/COPYRIGHT.rdoc for more details.
 <% end %>
 
 <% if @default_ifc_models.map(&:converted?).uniq == [true] %>
-<div class="ifc-viewer--container">
-  <ifc-viewer></ifc-viewer>
-</div>
+  <ifc-base-view></ifc-base-view>
 <% end %>
